# agility-teams-manager

./: CODE_OF_CONDUCT.md  Procfile  README.md  pyproject.toml  redirect.py  requirements.txt  results.py  results2.py  results3.py  server.py  test
app/: server.py
app/controllers/: app.py  join_team.py  main.py  new_team.py
app/controllers/admin/: __init__.py  login.py  results.py
app/http/: static.py
app/views/: admin.html  app.html  select.html  team-create.html  team-new.html
app/views/admin/: login.html  view-results.html
app/views/templates/: dog-select.html  small.html
modules/: concurrents.py  logs.py  results.py  shared.py  subshared.py
modules/data/: concurrents.py  notifications.py  results.py  team_info.py  utils.py
scripts/: poetry-to-pip.sh
ui/admin/: colors.css  display.css  fonts.css  style.css
ui/app/: colors.css  display.css  fonts.css  style.css
ui/templates/small/: form.css  style.css
