[tool.poetry]
name = "agility-teams-manager"
version = "0.1.0"
description = "Teams ranking for Avallon Cup"
authors = ["Virinas-code <alexcode228@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
coloredlogs = "^15.0.1"
verboselogs = "^1.7"
colorama = "^0.4.4"
gunicorn = "^20.1.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
spyder-unittest = "^0.5.0"
spyder-kernels = "^2.3.2"
spyder-line-profiler = "^0.3.0"
spyder-terminal = "^1.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
